--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "ethers": "^5.6.9",
     "preline": "^1.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
