--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ethers": "^5.6.9",
+    "metamask-react": "^2.4.0",
     "preline": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
