--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "preline": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.3.0"
+    "react-hot-toast": "^2.3.0",
+    "truncate-eth-address": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
