--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "ethers": "^5.6.9",
     "formik": "^2.2.9",
-    "metamask-react": "^2.4.0",
     "preline": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
-    "truncate-eth-address": "^1.0.2"
+    "truncate-eth-address": "^1.0.2",
+    "wagmi": "^0.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
