--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "preline": "^1.1.2",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
     "truncate-eth-address": "^1.0.2",
